# Motor-Sim

./: CMakeLists.txt  Makefile  main.cpp
src/: main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h
src/shaders/: fragment.glsl
